Update POS system

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -53,24 +53,24 @@
             <h5 class="text-success text-center m-lg-3 pt-5" >CUSTOMER FORM</h5>
             <form class="m-5">
                 <div class="mb-3">
-                    <label for="cusID" class="form-label text-dark">CUSTOMER  ID</label>
-                    <input type="text" class="form-control  border-success text-dark focus-ring-warning" id="cusID" name="id">
+                    <label for="txt-id" class="form-label text-dark">CUSTOMER  ID</label>
+                    <input type="text" class="form-control  border-success text-dark focus-ring-warning" id="txt-id" name="id">
                 </div>
                 <div class="mb-3">
-                    <label for="cusName" class="form-label text-dark">NAME</label>
-                    <input type="text" class="form-control  border-success text-dark focus-ring-warning" id="cusName" name="name">
+                    <label for="txt-name" class="form-label text-dark">NAME</label>
+                    <input type="text" class="form-control  border-success text-dark focus-ring-warning" id="txt-name" name="name">
                 </div>
                 <div class="mb-3">
-                    <label for="cusAddress" class="form-label text-dark">ADDRESS</label>
-                    <input type="text" class="form-control  border-success text-dark focus-ring-warning" id="cusAddress" name="address">
+                    <label for="txt-address" class="form-label text-dark">ADDRESS</label>
+                    <input type="text" class="form-control  border-success text-dark focus-ring-warning" id="txt-address" name="address">
                 </div>
                 <div class="mb-3">
-                    <label for="cusContact" class="form-label text-dark">CONTACT</label>
-                    <input type="tel" class="form-control  border-success text-dark focus-ring-warning " id="cusContact" name="contact">
+                    <label for="txt-contact" class="form-label text-dark">CONTACT</label>
+                    <input type="tel" class="form-control  border-success text-dark focus-ring-warning " id="txt-contact" name="contact">
                 </div>
                 <div class="row m-0 gap-2 mt-5">
-                    <button type="button" class="btn btn-outline-success  col" id="onActionSave">SAVE</button>
-                    <button type="button" class="btn btn-outline-success col" id="btnCustomerUpdate">UPDATE</button>
+                    <button type="button" class="btn btn-outline-success  col" id="btnSave">SAVE</button>
+                    <button type="button" class="btn btn-outline-success col" id="btnUpdate">UPDATE</button>
                     <button type="button" class="btn btn-outline-success col" id="btnDelete">DELETE</button>
                     <button type="button" class="btn btn-outline-success col" id="btnGetAll">GET ALL</button>
                 </div>
@@ -295,6 +295,7 @@
 <script src="assests/bootstrap/font-awsome/js/all.min.js"></script>
 <script src="assests/bootstrap/js/jquery-3.7.1.min.js"></script>
 <script src="assests/bootstrap/js/app.js"></script>
+
 
 <script>
     document.getElementById("customer").style.display="none";
