ItemDTO is created

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -110,11 +110,11 @@
                     <input type="text" class="form-control  border-success  focus-ring-warning" id="description">
                 </div>
                 <div class="mb-3">
-                    <label for="uPrice" class="form-label">UNIT PRICE</label>
-                    <input type="text" class="form-control  border-success  focus-ring-warning" id="uPrice">
+                    <label for="unitPrice" class="form-label">UNIT PRICE</label>
+                    <input type="text" class="form-control  border-success  focus-ring-warning" id="unitPrice">
                 </div>
                 <div class="mb-3">
-                    <label  class="form-label">QUANTITY</label>
+                    <label for="quantity" class="form-label">QUANTITY</label>
                     <input type="text" class="form-control  border-success  focus-ring-warning" id="quantity">
                 </div>
 
